--- a/Android/scenes/ktv/src/main/res/layout/ktv_item_highlight_voice.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_item_highlight_voice.xml
@@ -1,28 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="80dp"
-    android:layout_height="80dp">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="60dp"
+    android:layout_height="80dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <io.agora.scene.ktv.widget.CircularHornImageView
+    <ImageView
         android:id="@+id/ivBg"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@color/blue" />
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@color/blue"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text=""
+        android:layout_marginTop="5dp"
+        android:gravity="center"
+        android:text="123"
         android:textColor="@color/white"
-        android:textSize="18sp"
-        android:textStyle="bold" />
+        android:textSize="10dp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/ivBg"
+        app:layout_constraintStart_toStartOf="@+id/ivBg"
+        app:layout_constraintEnd_toEndOf="@+id/ivBg"/>
 
     <View
         android:id="@+id/select"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@mipmap/ktv_highlight_bg" />
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="@mipmap/ktv_highlight_bg"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
