--- a/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_active.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_active.xml
@@ -8,15 +8,33 @@
     tools:layout_height="230dp"
     tools:theme="@style/Theme.MaterialComponents.Light">
 
-    <TextView
+    <LinearLayout
         android:id="@+id/btnVocalHighlight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:text="突出人声"
-        android:textColor="@color/white_60_percent"
+        android:layout_marginTop="10dp"
+        android:background="@color/black_30_percent"
+        android:paddingStart="10dp"
+        android:paddingEnd="3dp"
+        android:paddingVertical="5dp"
         app:layout_constraintTop_toBottomOf="@+id/scoringView"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/tvVocalHighlight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="突出人声"
+            android:textColor="@color/white_60_percent"/>
+
+        <ImageView
+            android:id="@+id/ivVocalHighlight"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="5dp"
+            android:background="@mipmap/ktv_highlight_head_bg"/>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/downloadLrcFailedView"
