--- a/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_control_view.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_control_view.xml
@@ -32,6 +32,7 @@
                 android:id="@+id/tvMusicName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="6dp"
                 android:textColor="@color/def_text_grey_979"
                 app:layout_constraintStart_toStartOf="parent"
@@ -52,6 +53,7 @@
                 android:id="@+id/tvCumulativeScore"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
                 android:layout_marginTop="6dp"
                 android:text="0"
                 android:textColor="@android:color/white"
@@ -62,6 +64,7 @@
                 android:id="@+id/grade_view"
                 android:layout_width="match_parent"
                 android:layout_height="12dp"
+                android:layout_marginHorizontal="20dp"
                 android:layout_marginTop="4dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -92,7 +95,7 @@
                 android:id="@+id/line_score"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="48dp"
+                android:layout_marginTop="50dp"
                 android:text="    "
                 android:textColor="@color/white"
                 android:textSize="14sp"
