--- a/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_active.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_layout_lrc_active.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:background="@mipmap/ktv_mv_default"
-    tools:layout_height="230dp"
+    tools:layout_height="280dp"
     tools:theme="@style/Theme.MaterialComponents.Light">
 
     <LinearLayout
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@color/black_30_percent"
+        android:background="@drawable/ktv_bg_highlight"
         android:paddingStart="10dp"
         android:paddingEnd="3dp"
         android:paddingVertical="5dp"
@@ -69,7 +69,7 @@
         android:id="@+id/scoringView"
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="50dp"
         android:background="#02FFFFFF"
         app:initialScore="0"
         app:layout_constraintEnd_toEndOf="parent"
@@ -116,7 +116,7 @@
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_marginStart="15dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="5dp"
         android:insetLeft="0dp"
         android:insetTop="2dp"
         android:insetRight="0dp"
@@ -142,7 +142,7 @@
         android:layout_width="26dp"
         android:layout_height="36dp"
         android:layout_marginStart="20dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="5dp"
         android:insetLeft="0dp"
         android:insetTop="0dp"
         android:insetRight="0dp"
@@ -168,7 +168,7 @@
         android:layout_width="26dp"
         android:layout_height="36dp"
         android:layout_marginStart="20dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="5dp"
         android:insetLeft="0dp"
         android:insetTop="0dp"
         android:insetRight="0dp"
@@ -281,7 +281,7 @@
         android:layout_width="26dp"
         android:layout_height="36dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="5dp"
         android:background="@null"
         android:checkable="true"
         android:insetLeft="0dp"
