--- a/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_layout_game_rank_list_view.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_layout_game_rank_list_view.xml
@@ -76,7 +76,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:overScrollMode="never"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="1"
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/ktv_item_rank_list" />
 </LinearLayout>
