--- a/Android/scenes/ktv/src/main/res/layout/fragment_profile.xml
+++ b/Android/scenes/ktv/src/main/res/layout/fragment_profile.xml
@@ -83,6 +83,7 @@
         android:textStyle="bold"
         android:textColor="@color/white_80_percent"
         android:textSize="17sp"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/hScrollView" />
 
@@ -92,6 +93,7 @@
         android:layout_height="26dp"
         android:layout_marginEnd="20dp"
         android:button="@drawable/cb_def_selector"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/tvPrefessional" />
 
@@ -100,6 +102,7 @@
         android:layout_height="1dp"
         android:layout_marginTop="20dp"
         android:background="@color/white_20_percent"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvPrefessional" />
@@ -113,7 +116,7 @@
         android:background="@color/ktv_dialog_bg_blue"
         android:alpha="0.7"
         android:visibility="invisible"
-        app:layout_constraintTop_toBottomOf="@+id/tvPrefessional"
+        app:layout_constraintTop_toBottomOf="@+id/tvLowLatency"
         />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -126,17 +129,9 @@
         android:textStyle="bold"
         android:textColor="@color/white_80_percent"
         android:textSize="17sp"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvPrefessional"/>
-
-<!--    <Spinner-->
-<!--        android:id="@+id/spAEC"-->
-<!--        android:layout_width="50dp"-->
-<!--        android:layout_height="26dp"-->
-<!--        android:layout_marginEnd="20dp"-->
-<!--        android:entries="@array/ktv_aec"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="@id/tvVoice" />-->
 
     <RadioGroup
         android:id="@+id/rgVoiceMode"
@@ -147,6 +142,7 @@
         android:background="@drawable/ktv_ear_back_mode_radius"
         android:orientation="horizontal"
         android:gravity="center"
+        android:visibility="gone"
         app:layout_constraintTop_toTopOf="@+id/tvVoice"
         app:layout_constraintBottom_toBottomOf="@+id/tvVoice"
         app:layout_constraintEnd_toEndOf="parent"
@@ -206,6 +202,7 @@
         android:layout_height="1dp"
         android:layout_marginTop="20dp"
         android:background="@color/white_20_percent"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvVoice" />
@@ -240,6 +237,91 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvLowLatency" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvAINS"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="40dp"
+        android:text="降低背景噪音"
+        android:textStyle="bold"
+        android:textColor="@color/white_80_percent"
+        android:textSize="17sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvLowLatency"/>
+
+    <RadioGroup
+        android:id="@+id/rgAINSMode"
+        android:layout_width="wrap_content"
+        android:layout_height="28dp"
+        android:layout_marginEnd="30dp"
+        android:padding="4px"
+        android:background="@drawable/ktv_ear_back_mode_radius"
+        android:orientation="horizontal"
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="@+id/tvAINS"
+        app:layout_constraintBottom_toBottomOf="@+id/tvAINS"
+        app:layout_constraintEnd_toEndOf="parent"
+        >
+        <RadioButton
+            android:id="@+id/tvAINSClose"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:textColor="@drawable/ktv_ear_back_mode_status"
+            android:background="@drawable/ktv_ear_back_mode_selector"
+            android:gravity="center"
+            android:button="@null"
+            android:checked="true"
+            android:text="关闭"
+            app:layout_constraintTop_toTopOf="@+id/tvModeOboe"
+            app:layout_constraintBottom_toBottomOf="@+id/tvModeOboe"
+            app:layout_constraintEnd_toStartOf="@+id/tvModeOboe"
+            />
+        <RadioButton
+            android:id="@+id/tvAINSMiddle"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:textColor="@drawable/ktv_ear_back_mode_status"
+            android:background="@drawable/ktv_ear_back_mode_selector"
+            android:gravity="center"
+            android:button="@null"
+            android:checked="false"
+            android:text="中"
+            app:layout_constraintTop_toTopOf="@+id/tvModeOboe"
+            app:layout_constraintBottom_toBottomOf="@+id/tvModeOboe"
+            app:layout_constraintEnd_toStartOf="@+id/tvModeOboe"
+            />
+        <RadioButton
+            android:id="@+id/tvAINSHigh"
+            android:layout_width="wrap_content"
+            android:layout_height="24dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:textColor="@drawable/ktv_ear_back_mode_status"
+            android:background="@drawable/ktv_ear_back_mode_selector"
+            android:gravity="center"
+            android:button="@null"
+            android:checked="false"
+            android:text="高"
+            app:layout_constraintTop_toTopOf="@+id/tvMode"
+            app:layout_constraintBottom_toBottomOf="@+id/tvMode"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+    </RadioGroup>
+
+    <View
+        android:layout_width="365dp"
+        android:layout_height="1dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/white_20_percent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvAINS" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
