[Fix][Android] fixbugs ent-736,ent-737

--- a/Android/scenes/ktv/src/main/res/layout/activity_room_list.xml
+++ b/Android/scenes/ktv/src/main/res/layout/activity_room_list.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    android:background="@mipmap/bg_app_def_white"
-    android:paddingBottom="20dp">
+    android:background="@mipmap/bg_app_def_white">
 
     <io.agora.scene.widget.CommonTitleView
         android:id="@+id/title_view"
@@ -62,6 +60,7 @@
         android:textColor="@color/white"
         android:visibility="gone"
         tools:visibility="visible"
+        android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
