--- a/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_activity_room_living.xml
+++ b/Android/scenes/ktv_singbattle/src/main/res/layout/ktv_activity_room_living.xml
@@ -5,21 +5,21 @@
     android:id="@+id/superLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_app_def_dark"
+    android:background="@mipmap/ktv_room_bg"
     tools:context=".live.RoomLivingActivity">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@mipmap/ktv_room_bg" />
+<!--    <androidx.appcompat.widget.AppCompatImageView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:scaleType="centerCrop"-->
+<!--        android:src="@mipmap/ktv_room_bg" />-->
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvRoomName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="10dp"
         android:drawableStart="@mipmap/ic_k"
         android:drawablePadding="5dp"
         android:gravity="center_vertical"
@@ -137,7 +137,7 @@
         android:layout_width="38dp"
         android:layout_height="38dp"
         android:layout_marginStart="20dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="15dp"
         android:button="@null"
         android:checked="true"
         android:drawableStart="@drawable/bg_cb_mic_status"
@@ -150,7 +150,7 @@
         android:layout_width="38dp"
         android:layout_height="38dp"
         android:layout_marginStart="5dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="15dp"
         android:button="@null"
         android:drawableStart="@drawable/bg_cb_video_status"
         android:padding="5dp"
