--- a/Android/scenes/ktv/src/main/res/layout/ktv_activity_room_living.xml
+++ b/Android/scenes/ktv/src/main/res/layout/ktv_activity_room_living.xml
@@ -5,14 +5,14 @@
     android:id="@+id/superLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_app_def_dark"
+    android:background="@mipmap/ktv_room_bg"
     tools:context=".live.RoomLivingActivity">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@mipmap/ktv_room_bg" />
+<!--    <androidx.appcompat.widget.AppCompatImageView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:scaleType="centerCrop"-->
+<!--        android:src="@mipmap/ktv_room_bg" />-->
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvRoomName"
