--- a/Android/scenes/voice/src/main/res/layout/voice_dialog_chatroom_earback_setting.xml
+++ b/Android/scenes/voice/src/main/res/layout/voice_dialog_chatroom_earback_setting.xml
@@ -90,132 +90,141 @@
     <View
         android:id="@+id/vSettingMark"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="60dp"
         android:elevation="0.5dp"
-        android:background="@color/white"
-        android:alpha="0.8"
+        android:background="@color/voice_transparent"
         android:visibility="invisible"
-        app:layout_constraintTop_toBottomOf="@+id/tvSetting"
-        />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvVolumeTitle"
-        style="@style/voice_bottom_sheet_text_style"
-        android:layout_marginStart="20dp"
-        android:text="耳返音量"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvSetting" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvVolume"
-        android:layout_width="30dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clSetting"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="20dp"
-        android:textColor="#6D7291"
-        android:textSize="@dimen/voice_sp_14"
-        android:gravity="right"
-        android:text="100"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/tvVolumeTitle"
-        app:layout_constraintBottom_toBottomOf="@+id/tvVolumeTitle" />
+        android:background="@color/white"
+        android:alpha="0.3"
+        app:layout_constraintTop_toBottomOf="@+id/tvSetting">
 
-    <androidx.appcompat.widget.AppCompatSeekBar
-        android:id="@+id/slVolume"
-        style="@style/voice_bottom_sheet_progress"
-        android:layout_width="160dp"
-        android:layout_height="40dp"
-        android:progress="50"
-        app:layout_constraintTop_toTopOf="@+id/tvVolumeTitle"
-        app:layout_constraintEnd_toStartOf="@id/tvVolume"
-        app:layout_constraintBottom_toBottomOf="@id/tvVolumeTitle"
-        />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvVolumeTitle"
+            style="@style/voice_bottom_sheet_text_style"
+            android:layout_marginStart="20dp"
+            android:text="耳返音量"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.divider.MaterialDivider
-        style="@style/voice_bottom_sheet_divider_style"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvVolumeTitle" />
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvMode"
-        style="@style/voice_bottom_sheet_text_style"
-        android:layout_marginStart="20dp"
-        android:text="耳返模式"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvVolumeTitle" />
-
-    <RadioGroup
-        android:id="@+id/rgMode"
-        android:layout_width="wrap_content"
-        android:layout_height="28dp"
-        android:layout_marginRight="20dp"
-        android:padding="2dp"
-        android:background="@drawable/voice_ear_back_mode_radius"
-        android:orientation="horizontal"
-        android:gravity="center"
-        app:layout_constraintTop_toTopOf="@+id/tvMode"
-        app:layout_constraintBottom_toBottomOf="@+id/tvMode"
-        app:layout_constraintEnd_toEndOf="parent"
-        >
-        <RadioButton
-            android:id="@+id/tvModeAuto"
-            android:layout_width="wrap_content"
-            android:layout_height="24dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:textColor="@color/voice_ear_back_mode_selector"
-            android:background="@drawable/voice_ear_back_mode_selector"
-            android:gravity="center"
-            android:button="@null"
-            android:checked="true"
-            android:text="自动"
-            app:layout_constraintTop_toTopOf="@+id/tvModeOboe"
-            app:layout_constraintBottom_toBottomOf="@+id/tvModeOboe"
-            app:layout_constraintEnd_toStartOf="@+id/tvModeOboe"
-            />
-        <RadioButton
-            android:id="@+id/tvModeOpenSL"
-            android:layout_width="wrap_content"
-            android:layout_height="24dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:textColor="@color/voice_ear_back_mode_selector"
-            android:background="@drawable/voice_ear_back_mode_selector"
-            android:gravity="center"
-            android:button="@null"
-            android:checked="false"
-            android:text="强制OpenSL"
-            app:layout_constraintTop_toTopOf="@+id/tvModeOboe"
-            app:layout_constraintBottom_toBottomOf="@+id/tvModeOboe"
-            app:layout_constraintEnd_toStartOf="@+id/tvModeOboe"
-            />
-        <RadioButton
-            android:id="@+id/tvModeOboe"
-            android:layout_width="wrap_content"
-            android:layout_height="24dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:textColor="@color/voice_ear_back_mode_selector"
-            android:background="@drawable/voice_ear_back_mode_selector"
-            android:gravity="center"
-            android:button="@null"
-            android:checked="false"
-            android:text="强制Oboe"
-            app:layout_constraintTop_toTopOf="@+id/tvMode"
-            app:layout_constraintBottom_toBottomOf="@+id/tvMode"
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvVolume"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:textColor="#6D7291"
+            android:textSize="@dimen/voice_sp_14"
+            android:gravity="right"
+            android:text="100"
             app:layout_constraintEnd_toEndOf="parent"
-            />
-    </RadioGroup>
+            app:layout_constraintTop_toTopOf="@+id/tvVolumeTitle"
+            app:layout_constraintBottom_toBottomOf="@+id/tvVolumeTitle" />
 
-    <com.google.android.material.divider.MaterialDivider
-        style="@style/voice_bottom_sheet_divider_style"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvMode" />
+        <androidx.appcompat.widget.AppCompatSeekBar
+            android:id="@+id/slVolume"
+            style="@style/voice_bottom_sheet_progress"
+            android:layout_width="160dp"
+            android:layout_height="40dp"
+            android:progress="50"
+            app:layout_constraintTop_toTopOf="@+id/tvVolumeTitle"
+            app:layout_constraintEnd_toStartOf="@id/tvVolume"
+            app:layout_constraintBottom_toBottomOf="@id/tvVolumeTitle"
+            />
+
+        <com.google.android.material.divider.MaterialDivider
+            style="@style/voice_bottom_sheet_divider_style"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvVolumeTitle" />
+
+            <!--        注掉的代码是耳返模式，等sdk支持完善后添加上 -->
+<!--        <androidx.appcompat.widget.AppCompatTextView-->
+<!--            android:id="@+id/tvMode"-->
+<!--            style="@style/voice_bottom_sheet_text_style"-->
+<!--            android:layout_marginStart="20dp"-->
+<!--            android:text="耳返模式"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/tvVolumeTitle" />-->
+
+<!--        <RadioGroup-->
+<!--            android:id="@+id/rgMode"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="28dp"-->
+<!--            android:layout_marginRight="20dp"-->
+<!--            android:padding="2dp"-->
+<!--            android:background="@drawable/voice_ear_back_mode_radius"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:gravity="center"-->
+<!--            app:layout_constraintTop_toTopOf="@+id/tvMode"-->
+<!--            app:layout_constraintBottom_toBottomOf="@+id/tvMode"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            >-->
+<!--            <RadioButton-->
+<!--                android:id="@+id/tvModeAuto"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="24dp"-->
+<!--                android:paddingLeft="10dp"-->
+<!--                android:paddingRight="10dp"-->
+<!--                android:textColor="@color/voice_ear_back_mode_selector"-->
+<!--                android:background="@drawable/voice_ear_back_mode_selector"-->
+<!--                android:gravity="center"-->
+<!--                android:button="@null"-->
+<!--                android:checked="true"-->
+<!--                android:text="自动"-->
+<!--                app:layout_constraintTop_toTopOf="@+id/tvModeOboe"-->
+<!--                app:layout_constraintBottom_toBottomOf="@+id/tvModeOboe"-->
+<!--                app:layout_constraintEnd_toStartOf="@+id/tvModeOboe"-->
+<!--                />-->
+<!--            <RadioButton-->
+<!--                android:id="@+id/tvModeOpenSL"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="24dp"-->
+<!--                android:paddingLeft="10dp"-->
+<!--                android:paddingRight="10dp"-->
+<!--                android:textColor="@color/voice_ear_back_mode_selector"-->
+<!--                android:background="@drawable/voice_ear_back_mode_selector"-->
+<!--                android:gravity="center"-->
+<!--                android:button="@null"-->
+<!--                android:checked="false"-->
+<!--                android:text="强制OpenSL"-->
+<!--                app:layout_constraintTop_toTopOf="@+id/tvModeOboe"-->
+<!--                app:layout_constraintBottom_toBottomOf="@+id/tvModeOboe"-->
+<!--                app:layout_constraintEnd_toStartOf="@+id/tvModeOboe"-->
+<!--                />-->
+<!--            <RadioButton-->
+<!--                android:id="@+id/tvModeOboe"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="24dp"-->
+<!--                android:paddingLeft="10dp"-->
+<!--                android:paddingRight="10dp"-->
+<!--                android:textColor="@color/voice_ear_back_mode_selector"-->
+<!--                android:background="@drawable/voice_ear_back_mode_selector"-->
+<!--                android:gravity="center"-->
+<!--                android:button="@null"-->
+<!--                android:checked="false"-->
+<!--                android:text="强制Oboe"-->
+<!--                app:layout_constraintTop_toTopOf="@+id/tvMode"-->
+<!--                app:layout_constraintBottom_toBottomOf="@+id/tvMode"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                />-->
+<!--        </RadioGroup>-->
+
+<!--        <com.google.android.material.divider.MaterialDivider-->
+<!--            style="@style/voice_bottom_sheet_divider_style"-->
+<!--            android:layout_marginStart="20dp"-->
+<!--            android:layout_marginEnd="20dp"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@+id/tvMode" />-->
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <View
         android:id="@+id/vPingMark"
@@ -225,8 +234,7 @@
         android:elevation="2dp"
         android:background="@color/white"
         android:visibility="invisible"
-        app:layout_constraintTop_toBottomOf="@+id/tvMode"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/clSetting" />
     
     <androidx.cardview.widget.CardView
         android:id="@+id/cvPing"
@@ -239,8 +247,7 @@
         app:cardElevation="0dp"
         app:cardBackgroundColor="#FAFBFC"
         app:cardCornerRadius="@dimen/voice_sp_8"
-        app:layout_constraintTop_toBottomOf="@+id/tvMode"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/clSetting" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvPingTitle"
