--- a/Android/scenes/voice/src/main/res/layout/voice_room_music_item_layout.xml
+++ b/Android/scenes/voice/src/main/res/layout/voice_room_music_item_layout.xml
@@ -33,11 +33,22 @@
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivSelected"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:layout_marginRight="20dp"
         android:visibility="visible"
         android:src="@drawable/voice_icon_bgm_selected"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivSelectGif"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginRight="20dp"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
