--- a/Android/scenes/voice/src/main/res/drawable/voice_icon_progress_thumb20.xml
+++ b/Android/scenes/voice/src/main/res/drawable/voice_icon_progress_thumb20.xml
@@ -1,8 +1,29 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-    <size
-        android:width="20dp"
-        android:height="20dp" />
-    <solid android:color="@color/voice_dark_grey_color_eff4ff" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="oval">
+            <solid android:color="#000000" />
+            <size
+                android:width="22dp"
+                android:height="22dp" />
+            <gradient
+                android:angle="270"
+                android:centerColor="#55000000"
+                android:endColor="#11000000"
+                android:startColor="#22000000" />
+        </shape>
+    </item>
+
+    <item
+        android:bottom="2dp"
+        android:left="0dp"
+        android:right="0dp"
+        android:top="0dp">
+        <shape android:shape="oval">
+            <solid android:color="#FFFFFF" />
+            <size
+                android:width="22dp"
+                android:height="22dp" />
+        </shape>
+    </item>
+
+</layer-list>
