[Android]show update content inspect

--- a/Android/scenes/show/src/main/res/layout/show_live_prepare_activity.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_prepare_activity.xml
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
         android:orientation="horizontal"
+        android:paddingTop="@dimen/base_status_height"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
