--- a/Android/scenes/show/src/main/res/layout/show_live_detail_bottom.xml
+++ b/Android/scenes/show/src/main/res/layout/show_live_detail_bottom.xml
@@ -11,7 +11,8 @@
         android:id="@+id/layoutChat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="15dp">
+        android:padding="15dp"
+        android:visibility="invisible">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvChat"
